<resources>
    <string name="app_name">Buidem SL</string>
    <string name="app_lang">en</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Buidem SL</string>
    <string name="nav_header_subtitle">admin@buidem.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    s<string name="action_order_by">Order by</string>
    <string name="menu_home">Home</string>
    <string name="menu_client">Clients</string>
    <string name="menu_zonas">Zones</string>
    <string name="menu_tipos">Types</string>
    <string name="default_alert_accept">Accept</string>
    <string name="default_alert_cancel">Cancel</string>
    <string name="default_alert_delete">Delete</string>
    <string name="default_alert_clear">Clear</string>
    <string name="default_alert_delete_confirmation">Are you sure that you want to delete</string>
    <string name="fragment_home_empty_list">Oops!\nThere isn\'t any machine.\nYou can create one by pressing the Add button.</string>
    <string name="fragment_home_alert_order_by_title">Order by</string>
    <string-array name="fragment_home_alert_order_by_content">
        <item>Client name</item>
        <item>Zone</item>
        <item>Town</item>
        <item>Direction</item>
        <item>Last review date</item>
    </string-array>
    <string name="fragment_home_alert_filter_title">Serial number to search</string>
    <string name="fragment_zonas_alert_edit_title">Zone</string>
    <string name="fragment_zonas_alert_add_title">New zone</string>
    <string name="fragment_zonas_alert_add_description">Description</string>
    <string name="fragment_zonas_snackbar_successfuly_deleted">Deleted successfuly</string>
    <string name="fragment_zonas_snackbar_successfuly_updated">Updated successfuly</string>
    <string name="fragment_zonas_snackbar_successfuly_inserted">Inserted successfuly</string>
    <string name="fragment_zonas_snackbar_error_inserting">There was an error inserting that zone\nPlease try again</string>
    <string name="fragment_zonas_snackbar_error_updating">There was an error updating\nPlease try again</string>
    <string name="fragment_zonas_snackbar_error_deleting">There was an error deleting\nPlease try again</string>
    <string name="fragment_zonas_empty_list">Oops!\nThere isn\'t any zone.\nYou can create one by pressing the Add button.</string>
    <string name="fragment_tipos_empty_list">Oops!\nThere isn\'t any type.\nYou can create one by pressing the Add button.</string>
    <string name="fragment_tipos_snackbar_color_updated_successfuly">The color was updated successfuly</string>
    <string name="fragment_tipos_snackbar_color_updated_error">There was an error updating the color.\nPlease try it again</string>
    <string name="fragment_tipos_snackbar_error_deleting">There was an error deleting\nPlease try again</string>
    <string name="fragment_clients_empty_list">Oops!\nThere isn\'t any client.\nYou can create one by pressing the Add button.</string>
    <string name="fragment_clients_alert_edit_title">Client</string>
    <string name="fragment_clients_alert_add_title">New client</string>
    <string name="fragment_clients_alert_manage_name">Name</string>
    <string name="fragment_clients_alert_manage_surname">Surname</string>
    <string name="fragment_clients_alert_manage_email">Email</string>
    <string name="fragment_clients_alert_manage_phone">Phone</string>
    <string name="fragment_clients_snackbar_success_default">Action completed successfuly</string>
    <string name="fragment_clients_snackbar_error_inserting">There was an error inserting that client\nPlease try again</string>
    <string name="fragment_clients_snackbar_error_updating">There was an error updating\nPlease try again</string>
    <string name="fragment_clients_snackbar_error_deleting">There was an error deleting\nPlease try again</string>
    <string name="fragment_clients_mail_subject">Next machine review number</string>
    <string name="fragment_machine_managment_title">Machine management</string>
    <string name="fragment_machine_managment_serial">Serial number</string>
    <string name="fragment_machine_managment_direction">Direction</string>
    <string name="fragment_machine_managment_postal_code">Postal code</string>
    <string name="fragment_machine_managment_town">Town</string>
    <string name="fragment_machine_managment_last_revision">Last revision</string>
    <string name="fragment_machine_managment_client">Client</string>
    <string name="fragment_machine_managment_type">Type</string>
    <string name="fragment_machine_managment_zone">Zone</string>
    <string name="fragment_machine_managment_alert_content">Machine</string>
    <string name="fragment_maps_alert_permissions_title">Permission request</string>
    <string name="fragment_maps_alert_permissions_message">Please activate the GPS permission to improve the experience of using the map.</string>
    <string name="weather_dialog_getting_info_title">Getting info</string>
    <string name="weather_dialog_getting_info_message">Getting weather information</string>
    <string name="weather_dialog_processing_response_title">Processing info</string>
    <string name="weather_dialog_processing_response_message">Processing wheather information</string>
    <string name="weather_dialog_title">Wheather information</string>
    <string name="menu_maps">Maps</string>
</resources>