<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.buidemsl.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_zonas"
        android:name="com.example.buidemsl.ui.zonas.ZonasFragment"
        android:label="@string/menu_zonas"
        tools:layout="@layout/fragment_zonas" />

    <fragment
        android:id="@+id/nav_tipos"
        android:name="com.example.buidemsl.ui.tipos.TiposFragment"
        android:label="@string/menu_tipos"
        tools:layout="@layout/fragment_tipos" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.buidemsl.ui.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" />
</navigation>